Change visibility to avoid flickering

--- a/src/Umbraco.Web.UI.Client/src/less/components/overlays.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/overlays.less
@@ -127,6 +127,7 @@
     width: 400px;
     max-height: 100vh;
     box-sizing: border-box;
+    visibility: hidden;
     border-radius: @baseBorderRadius;
 
     &.umb-overlay--medium {
